--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "/",
     "paths": {
-      "~/*": ["./*"],
-      "@/*": ["./*"],
-      "~~/*": ["./*"],
-      "@@/*": ["./*"]
+      "@/*": [ "/*" ]
     }
-  },
-  "exclude": ["node_modules", ".nuxt", "dist"]
+  }
 }
